force-app/main/default/objects/PBB_Note_Types__c/PBB_Note_Types__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings to store possible Note Types for PBB Lifestyle</description>
    <label>PBB Note Types</label>
</CustomObject>