force-app/main/default/objects/PBB_Note_Types__c/fields/Account_Notepad__c.field-meta.xml
<CustomField>
    <fullName>Account_Notepad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether category belongs to Account Notepad or not, US-4570</description>
    <inlineHelpText>Choose if category belongs to Account Notepad</inlineHelpText>
    <label>Account Notepad</label>
    <type>Checkbox</type>
</CustomField>