force-app/main/default/objects/PBB_Note_Types__c/fields/Customer_Notepad__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notepad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether category belongs to Customer Notepad or not, US-4570</description>
    <inlineHelpText>Choose if category belongs to Customer Notepad</inlineHelpText>
    <label>Customer Notepad</label>
    <type>Checkbox</type>
</CustomField>