force-app/main/default/objects/PBB_Note_Types__c/fields/Note_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Note_Type_Name__c</fullName>
    <description>The type or category of the note, US-4570</description>
    <label>Note Type Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>